[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Hung-I Wang <whygowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pyink = "^23.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
